# actions-test

./: tasks.yml
.github/actions/: upload-task.yml
.github/actions/import-yaml/: README.md  action.yml  entrypoint.py
.github/actions/upload-task/: Dockerfile  README.md  action.yml  entrypoint.py  entrypoint.sh  publish_task.py
.github/workflows/: cleanup.yml  go-task.yml  import-task.yml  programming-task.yml
cmake-task/: CMakeLists.txt  metadata.yaml
cmake-task/src/: Calculator.cpp  Calculator.h
cmake-task/test/: CalculatorTest.cpp  VerificationCalculatorTest.cpp
gotask/: devskiller.json  metadata.yaml
gotask/verify_pack/: calculator_test.go
